...
  const [bedtime, setBedtime] = useState("");
  const [bfast, setBfast] = useState("");
  const [lunch, setLunch] = useState("");
  const [dinner, setDinner] = useState("");
  const [routine, setRoutine] = useState([
    {title: "Wake-up", "time": wakeup, "AM": false, "PM": false},
    {title: "Bedtime", "time": bedtime, "AM": false, "PM": false},
    {title: "Breakfast", "time": bfast, "AM": false, "PM": false},
    {title: "Lunch", "time": lunch, "AM": false, "PM": false},
    {title: "Dinner", "time": dinner, "AM": false, "PM": false}
  ]);

  useEffect(() => {
    if (user)
      getUserRoutine();
  }, [changeRoutine]);
...
  }


  return (
    <View style={styles.container}>
      <View style={{height: 20}} />
      <Text style={styles.title}>Smart Scheduler</Text>

      <View style={styles.label}>
        <Text style={styles.labelText}>SLEEP</Text>
      </View>

      <View style={styles.routineComponent}>
        <Ionicons name="sunny" color='#A2E1E2' size={30} style={{marginTop: 3}}/>
        <View style={{width: 7}}/>
        <Text style={styles.bigRoutineText}>Wake-Up:</Text>
        <View style={{width: 7}}/>
        <View style={{alignItems: 'center', justifyContent: 'center'}}>
          <TextInput
            testID="Wakeup"
            placeholder = { routine[0]["time"] ? routine[0]["time"] : "HH:MM"}
            style= {styles.input}
            autoCapitalize='none'
            autoCorrect={false}
            maxLength={5}
            onChangeText={(text) => updateRoutine(0, "time", text)}
          />
          <View style={styles.line} />
        </View>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[0]["AM"] ? styles.filledCircle :
                                 styles.openCircle}
                          testID="WakeupAM"
                          onPress={() => updateRoutine(0, "AM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>AM</Text>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[0]["PM"] ? styles.filledCircle :
                                 styles.openCircle}
...
                          onPress={() => updateRoutine(1, "AM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>AM</Text>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[1]["PM"] ? styles.filledCircle :
                                 styles.openCircle}
                          testID="BedtimePM"
                          onPress={() => updateRoutine(1, "PM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>PM</Text>
      </View>

      <View style={styles.longLabel}>
...
          />
          <View style={styles.line} />
        </View>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[2]["AM"] ? styles.filledCircle :
                                 styles.openCircle}
                          testID="BreakfastAM"
                          onPress={() => updateRoutine(2, "AM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>AM</Text>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[2]["PM"] ? styles.filledCircle :
                                 styles.openCircle}
...
                          onPress={() => updateRoutine(3, "AM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>AM</Text>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[3]["PM"] ? styles.filledCircle :
                                 styles.openCircle}
                          testID="LunchPM"
                          onPress={() => updateRoutine(3, "PM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>PM</Text>
      </View>

      <View style={styles.routineComponent}>
...
                          onPress={() => updateRoutine(4, "AM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>AM</Text>
        <View style={{width: 7}}/>
        <TouchableOpacity style={routine[4]["PM"] ? styles.filledCircle :
                                 styles.openCircle}
                          testID="DinnerPM"
                          onPress={() => updateRoutine(4, "PM", true)}>
        </TouchableOpacity>
        <Text style={styles.timeOption}>PM</Text>
      </View>

      <TouchableOpacity style={styles.submitButton}
                        onPress={() => checkInputs()}>
        <Text style={styles.submitText}>SUBMIT</Text>
      </TouchableOpacity>

    </View>
  );
}

...
