...
        onChangeText = {(text) => setPassword(text)}
      />
    <View style={{height: 0.5, width: width - 60, marginTop: -5, backgroundColor:'#000'}} />
      <View style={{height: 20}} />
      <TouchableOpacity style={styles.button}
                        onPress={() => login(email, password)}>
        <Text style={styles.btnText}>SIGN IN</Text>
      </TouchableOpacity>
      <TouchableOpacity style={styles.newUserButton}
                        onPress={() => navigation.navigate('Register')}>
        <Text style={styles.newUserBtnText}>NEW USER</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
...
